[package]
name = "hallo"
version = "0.1.0"
edition = "2021"
description = "Outcome planning for upcoming projects using Monte Carlo simulations"
license-file = "LICENSE.md"
repository = "https://github.com/mmmoli/hallo/"
keywords = ["montecarlo", "planning"]
homepage = "https://github.com/mmmoli/hallo/"
documentation = "http://docs.rs/rudiments"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hallo"
path = "src/lib.rs"

[[bin]]
name = "hallo"
path = "src/main.rs"

[dependencies]
chrono = "0.4.21"
color-eyre = "0.6.2"

